# rainway-sdk-native-examples

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-cd.yml  cmake.yml
echo-example/: CMakeLists.txt  README.md
echo-example/src/: main.cpp
host-example/: CMakeLists.txt  README.md
host-example/src/: main.cpp
video-player-example/: CMakeLists.txt  README.md
video-player-example/src/: main.cpp
